# cenzura

./: .gitignore  LICENSE  README.md  check_workflow.sh  config.yaml  pyproject.toml
.github/workflows/: test.yml
src/cenzura/: __init__.py  cli.py  ocr.py  redactor.py  scanner.py
tests/: test_video.py
